--- a/home.html
+++ b/home.html
@@ -44,24 +44,26 @@
             -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
         }
 
-        .image-container img {
+        .image-block {
+            text-align: center;
+            margin-right: 20px; /* Add spacing between images */
+        }
+
+        .image-block img {
             width: 271px;
             height: 592px;
             border-radius: 30px;
-            margin-right: 20px; /* Add spacing between images */
             transition: transform 0.3s ease, filter 0.3s ease;
         }
 
-        .image-container img:hover {
+        .image-block img:hover {
             transform: scale(0.95);
             filter: brightness(1.2);
         }
 
-        .image-headers {
-            display: flex;
-            justify-content: space-around;
+        .image-block .image-caption {
             color: #FB8500;
-            margin-bottom: 20px;
+            margin-top: 10px;
         }
 
         .main-text {
@@ -70,6 +72,19 @@
             margin: 50px 0;
             color: #FB8500;
             letter-spacing: 15px;
+        }
+
+        .main-text:hover {
+            animation: flip 0.6s;
+        }
+
+        @keyframes flip {
+            0% {
+                transform: rotateX(0);
+            }
+            100% {
+                transform: rotateX(360deg);
+            }
         }
 
         .center-image {
@@ -127,13 +142,8 @@
                 -ms-overflow-style: -ms-autohiding-scrollbar; /* Hide scrollbar on Edge */
             }
 
-            .image-container img {
+            .image-block {
                 margin-right: 10px; /* Adjust spacing between images */
-            }
-
-            .image-headers {
-                flex-direction: column;
-                align-items: center;
             }
 
             .main-text {
@@ -158,16 +168,22 @@
         <a href="#">Connect</a>
     </div>
     <div class="image-container">
-        <img src="hawf.png" alt="Image 1">
-        <img src="look.png" alt="Image 2">
-        <img src="pcf.png" alt="Image 3">
-        <img src="aid.png" alt="Image 4">
-    </div>
-    <div class="image-headers">
-        <div>HAWF</div>
-        <div>Look Up</div>
-        <div>PCF EDC</div>
-        <div>Action Aid ethiopia</div>
+        <div class="image-block">
+            <img src="hawf.png" alt="Image 1">
+            <div class="image-caption">HAWF</div>
+        </div>
+        <div class="image-block">
+            <img src="look.png" alt="Image 2">
+            <div class="image-caption">Look Up</div>
+        </div>
+        <div class="image-block">
+            <img src="pcf.png" alt="Image 3">
+            <div class="image-caption">PCF EDC</div>
+        </div>
+        <div class="image-block">
+            <img src="aid.png" alt="Image 4">
+            <div class="image-caption">Action Aid Ethiopia</div>
+        </div>
     </div>
     <div class="main-text">
         L A M O N J E
@@ -176,7 +192,7 @@
         <img src="lamonjelogo1.png" alt="Center Image">
     </div>
     <div class="paragraph">
-        <p>Our clients entrust us with complex tasks of bringing their stories to life.<br> They understand the power of a well-crafted narrative and trust our expertise<br> to navigate the complexities of storytelling across events, content creation, and strategic marketing.</p>
+        <p>Our clients entrust us with complex tasks of bringing their stories to life. <br>They understand the power of a well-crafted narrative and trust our expertise<br> to navigate the complexities of storytelling across events, content creation, and strategic marketing.</p>
     </div>
     <div class="footer">
         <a href="#">Look at our projects <span class="arrow">→</span></a>
