--- a/Project.html
+++ b/Project.html
@@ -6,163 +6,201 @@
     <title>About - LaMonje</title>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 <style>
-    body {
-        background-color: #EAE2B7;
-        color: #000000;
-        font-family: 'Anton', sans-serif;
-        margin: 0;
-        padding: 0;
-        transition: filter 0.3s ease; /* Transition for blur effect */
-    }
+  /* styles.css */
 
-    .blurred {
-        filter: blur(5px); /* Blur effect */
-        pointer-events: none; /* Disable clicking on blurred elements */
-    }
+body {
+    background-color: #EAE2B7;
+    color: #000000;
+    font-family: 'Anton', sans-serif;
+    margin: 0;
+    padding: 0;
+}
 
-    .navbar {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 10px;
-        position: sticky;
-        top: 0;
-        z-index: 1000;
-        background: transparent;
-    }
+.navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    background: transparent;
+}
 
-    .navbar a {
-        color: #FB8500;
-        text-decoration: none;
-        margin: 0 15px;
-        transition: color 0.3s ease;
-    }
+.navbar a {
+    color: #FB8500;
+    text-decoration: none;
+    margin: 0 15px;
+    transition: color 0.3s ease;
+}
 
-    .navbar a:hover {
-        color: #000;
-    }
+.navbar a:hover {
+    color: #000;
+}
 
-    .content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 20px;
-    }
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
 
-    .section {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        margin: 40px 0;
-        cursor: pointer;
-    }
+.section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 40px 0;
+    cursor: pointer;
+}
 
+.title {
+    font-size: 120px; /* Very large header size */
+    margin-bottom: 10px;
+    text-align: center;
+    cursor: pointer;
+    transition: transform 0.3s ease; /* Melting effect */
+    animation: floatAnimation 3s infinite alternate; /* Floating animation */
+}
+
+.title:hover {
+    transform: scale(1.1);
+}
+
+.subtext {
+    font-size: 36px; /* Larger subtext size */
+    font-weight: bold;
+    color: #FB8500; /* Orange color */
+    text-align: center;
+    margin-top: 10px;
+    cursor: pointer;
+    transition: color 0.3s ease;
+}
+
+.subtext:hover {
+    color: #FF5733; /* Darker shade of orange */
+}
+
+.hidden-section {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2000;
+    background-color: rgba(222, 226, 230, 0.8); /* Semi-transparent gray background */
+    padding: 20px;
+    overflow-y: auto;
+    pointer-events: auto; /* Enable clicking on pop-up */
+    opacity: 0;
+    transition: opacity 0.5s ease; /* Fade-in transition */
+}
+
+.hidden-section.visible {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 1;
+}
+
+.close-button {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 24px;
+    color: #FB8500; /* Orange color */
+    cursor: pointer;
+    transition: color 0.3s ease;
+}
+
+.close-button:hover {
+    color: #FF5733; /* Darker shade of orange */
+}
+
+.image-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+    padding: 20px;
+    width: 80%;
+    max-width: 1200px;
+}
+
+.image-container {
+    flex: 1 1 auto;
+    max-width: 100%;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+
+.image-container img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    transition: transform 0.3s ease;
+}
+
+.image-container:hover img {
+    transform: scale(1.1);
+}
+
+.large {
+    flex-basis: calc(33.33% - 20px);
+}
+
+.medium {
+    flex-basis: calc(25% - 20px);
+}
+
+.small {
+    flex-basis: calc(16.66% - 20px);
+}
+
+.details {
+    margin-top: 20px;
+    text-align: center;
+    font-size: 24px;
+    line-height: 1.6;
+    color: #000000; /* Handwritten font color */
+    font-family: 'Shadows Into Light', cursive; /* Handwritten font */
+}
+
+@keyframes floatAnimation {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-20px);
+    }
+}
+
+@media (max-width: 768px) {
     .title {
-        font-size: 120px; /* Very large header size */
-        margin-bottom: 10px;
-        text-align: center;
-        cursor: pointer;
-        transition: transform 0.3s ease; /* Melting effect */
-        animation: floatAnimation 3s infinite alternate; /* Floating animation */
-    }
-
-    .title:hover {
-        transform: scale(1.1);
+        font-size: 80px; /* Responsive header size */
     }
 
     .subtext {
-        font-size: 36px; /* Larger subtext size */
-        font-weight: bold;
-        color: #FB8500; /* Orange color */
-        text-align: center;
-        margin-top: 10px;
-        cursor: pointer;
-        transition: color 0.3s ease;
+        font-size: 24px; /* Responsive subtext size */
     }
 
-    .subtext:hover {
-        color: #FF5733; /* Darker shade of orange */
+    .large, .medium, .small {
+        flex-basis: calc(50% - 20px);
     }
-
-    .hidden-section {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 2000;
-        background-color: rgba(255, 255, 255, 0.9); /* Fully blurred white background */
-        backdrop-filter: blur(10px); /* Apply blur to background */
-        padding: 20px;
-        overflow-y: auto;
-        pointer-events: auto; /* Enable clicking on pop-up */
-    }
-
-    .hidden-section.visible {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .image-wrapper {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        gap: 20px;
-        margin-top: 20px;
-        padding: 20px;
-        width: 80%;
-        max-width: 1200px;
-    }
-
-    .image-container {
-        position: relative;
-        overflow: hidden;
-        border-radius: 10px;
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-    }
-
-    .image-container img {
-        width: 100%;
-        height: auto;
-        border-radius: 10px;
-        transition: transform 0.3s ease;
-    }
-
-    .image-container img:hover {
-        transform: scale(1.1);
-    }
-
-    .details {
-        margin-top: 20px;
-        text-align: center;
-        font-size: 24px;
-        line-height: 1.6;
-        color: #000000; /* Handwritten font color */
-        font-family: 'Shadows Into Light', cursive; /* Handwritten font */
-    }
-
-    @keyframes floatAnimation {
-        0%, 100% {
-            transform: translateY(0);
-        }
-        50% {
-            transform: translateY(-20px);
-        }
-    }
-
-    @media (max-width: 768px) {
-        .title {
-            font-size: 80px; /* Responsive header size */
-        }
-
-        .subtext {
-            font-size: 24px; /* Responsive subtext size */
-        }
-    }
+}
 </style>
+</head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projects</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="navbar">
@@ -177,21 +215,34 @@
             <div class="title">Company 1, Industry: Fashion</div>
             <div class="subtext">Explore the Project</div>
             <div class="hidden-section" id="company1">
+                <div class="close-button" onclick="toggleVisibility('company1')">X</div>
                 <div class="image-wrapper">
-                    <div class="image-container">
+                    <div class="image-container large">
                         <img src="psy11.jpg" alt="Slide Image 1">
                     </div>
-                    <div class="image-container">
+                    <div class="image-container medium">
                         <img src="about1.png" alt="Slide Image 2">
                     </div>
-                    <div class="image-container">
+                    <div class="image-container small">
                         <img src="image4.jpg" alt="Slide Image 3">
                     </div>
-                    <div class="image-container">
+                    <div class="image-container medium">
                         <img src="image5.jpg" alt="Slide Image 4">
                     </div>
-                    <div class="image-container">
+                    <div class="image-container large">
                         <img src="psy11.jpg" alt="Slide Image 5">
+                    </div>
+                    <div class="image-container small">
+                        <img src="about1.png" alt="Slide Image 6">
+                    </div>
+                    <div class="image-container medium">
+                        <img src="image4.jpg" alt="Slide Image 7">
+                    </div>
+                    <div class="image-container large">
+                        <img src="image5.jpg" alt="Slide Image 8">
+                    </div>
+                    <div class="image-container small">
+                        <img src="psy11.jpg" alt="Slide Image 9">
                     </div>
                 </div>
                 <div class="details">
@@ -205,39 +256,6 @@
             </div>
         </div>
 
-        <!-- Repeat for Company 2 -->
-        <div class="section" onclick="toggleVisibility('company2')">
-            <div class="title">Company 2, Industry: Example</div>
-            <div class="subtext">Explore the Project</div>
-            <div class="hidden-section" id="company2">
-                <div class="image-wrapper">
-                    <div class="image-container">
-                        <img src="psy11.jpg" alt="Slide Image 1">
-                    </div>
-                    <div class="image-container">
-                        <img src="about1.png" alt="Slide Image 2">
-                    </div>
-                    <div class="image-container">
-                        <img src="image4.jpg" alt="Slide Image 3">
-                    </div>
-                    <div class="image-container">
-                        <img src="image5.jpg" alt="Slide Image 4">
-                    </div>
-                    <div class="image-container">
-                        <img src="psy11.jpg" alt="Slide Image 5">
-                    </div>
-                </div>
-                <div class="details">
-                    What We Did:<br>
-                    ● Example Task 1<br>
-                    ● Example Task 2<br>
-                    ● Example Task 3<br>
-                    ● Example Task 4<br><br>
-                    More about what we did: Detailed description here...
-                </div>
-            </div>
-        </div>
-
         <!-- Repeat for other companies -->
 
     </div>
@@ -246,7 +264,6 @@
         function toggleVisibility(id) {
             const section = document.getElementById(id);
             section.classList.toggle('visible');
-            document.body.classList.toggle('blurred');
         }
     </script>
 </body>
